--- a/Realtime_R0_World.ipynb
+++ b/Realtime_R0_World.ipynb
@@ -161,18 +161,18 @@
     "#import import_ipynb\n",
     "#import RealtimeR0\n",
     "\n",
+    "### Add before the \"Choosing the optimal sigma\" cell\n",
     "## Break the notebook with this to avoid long calculation, only primary functions is required for importing\n",
     "# raise SystemExit(\"STOP MASTER US NOTEBOOK HERE!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import pandas as pd\n",
+    "#import requests\n",
     "\n",
     "#state_name = 'ZA'\n",
     "\n",
@@ -192,13 +192,13 @@
     "#day = pd.DataFrame({'Confirmed':4220}, index=pd.to_datetime(['2020-04-24']))\n",
     "#data_index = data_index.append(day)\n",
     "\n",
-    "#country = data_index['Confirmed']\n",
-    "#country"
+    "#states = data_index['Confirmed']\n",
+    "#states"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "52  https://twitter.com/COVID_19_ZA/status/1255200...  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
        "2020-04-28  0.95    0.40     1.42"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -595,18 +595,21 @@
     }
    ],
    "source": [
-    "np.seterr(divide = 'ignore')\n",
+    "# ZA: np.seterr(divide = 'ignore')\n",
     "\n",
     "sigmas = np.linspace(1/20, 1, 20)\n",
     "\n",
-    "# only consider the official 9 provinces\n",
+    "# ZA: only consider the official 9 provinces\n",
     "states_to_process = list(states.columns.values[2:11])\n",
-    "# states_to_process.append('Total RSA')\n",
+    "# ZA: do not think the total RSA sigma needs to be included to find max later\n",
+    "# states_to_process.append('Total RSA') \n",
     "\n",
     "results = {}\n",
     "\n",
     "for state_name in states_to_process:\n",
     "    \n",
+    "    # --> ZA prepare data\n",
+    "    # ZA: Rt is very small for some provinces\n",
     "    print(state_name)\n",
     "    cases = pd.Series(states[state_name].values,index=states['date'])\n",
     "    new, smoothed = prepare_cases(cases, cutoff=10)\n",
@@ -626,6 +629,7 @@
     "                continue\n",
     "            \n",
     "    print(cut)\n",
+    "    ## <-- ZA prepare data\n",
     "    \n",
     "    result = {}\n",
     "    \n",
@@ -652,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -669,10 +673,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1a1a0a4a10>"
+       "<matplotlib.lines.Line2D at 0x1a1999cb90>"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -718,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +885,7 @@
        "[181 rows x 5 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +901,7 @@
     "    most_likely = posteriors.idxmax().rename('ML')\n",
     "    result = pd.concat([most_likely, hdis_90, hdis_50], axis=1)\n",
     "    \n",
-    "    # add province index for SA data\n",
+    "    # ZA: add province index\n",
     "    result.index = pd.MultiIndex.from_product([[state_name], result.index], names=['state','date'])\n",
     "    \n",
     "    if final_results is None:\n",
@@ -912,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -949,11 +953,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# South Arica data as of 2020/04/28\n",
+    "# ZA: South Arica data as of 2020/04/28\n",
     "no_lockdown = [\n",
     "\n",
     "]\n",
@@ -969,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1049,19 +1053,96 @@
        "WC     1.06     1.69    0.33"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# ZA: df slighty different to US\n",
     "mr = final_results.groupby(level=0)[['ML', 'High_90', 'Low_90']].last()\n",
     "mr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# US data has broke primary notebook, thus copying the method\n",
+    "def plot_rt(result, ax, state_name):\n",
+    "    \n",
+    "    ax.set_title(f\"{state_name}\")\n",
+    "    \n",
+    "    # Colors\n",
+    "    ABOVE = [1,0,0]\n",
+    "    MIDDLE = [1,1,1]\n",
+    "    BELOW = [0,0,0]\n",
+    "    cmap = ListedColormap(np.r_[\n",
+    "        np.linspace(BELOW,MIDDLE,25),\n",
+    "        np.linspace(MIDDLE,ABOVE,25)\n",
+    "    ])\n",
+    "    color_mapped = lambda y: np.clip(y, .5, 1.5)-.5\n",
+    "    \n",
+    "    index = result['ML'].index.get_level_values('date')\n",
+    "    values = result['ML'].values\n",
+    "    \n",
+    "    # Plot dots and line\n",
+    "    ax.plot(index, values, c='k', zorder=1, alpha=.25)\n",
+    "    ax.scatter(index,\n",
+    "               values,\n",
+    "               s=40,\n",
+    "               lw=.5,\n",
+    "               c=cmap(color_mapped(values)),\n",
+    "               edgecolors='k', zorder=2)\n",
+    "    \n",
+    "    # Aesthetically, extrapolate credible interval by 1 day either side\n",
+    "    lowfn = interp1d(date2num(index),\n",
+    "                     result['Low_90'].values,\n",
+    "                     bounds_error=False,\n",
+    "                     fill_value='extrapolate')\n",
+    "    \n",
+    "    highfn = interp1d(date2num(index),\n",
+    "                      result['High_90'].values,\n",
+    "                      bounds_error=False,\n",
+    "                      fill_value='extrapolate')\n",
+    "    \n",
+    "    extended = pd.date_range(start=pd.Timestamp('2020-03-01'),\n",
+    "                             end=index[-1]+pd.Timedelta(days=1))\n",
+    "    \n",
+    "    ax.fill_between(extended,\n",
+    "                    lowfn(date2num(extended)),\n",
+    "                    highfn(date2num(extended)),\n",
+    "                    color='k',\n",
+    "                    alpha=.1,\n",
+    "                    lw=0,\n",
+    "                    zorder=3)\n",
+    "\n",
+    "    ax.axhline(1.0, c='k', lw=1, label='$R_t=1.0$', alpha=.25);\n",
+    "    \n",
+    "    # Formatting\n",
+    "    ax.xaxis.set_major_locator(mdates.MonthLocator())\n",
+    "    ax.xaxis.set_major_formatter(mdates.DateFormatter('%b'))\n",
+    "    ax.xaxis.set_minor_locator(mdates.DayLocator())\n",
+    "    \n",
+    "    ax.yaxis.set_major_locator(ticker.MultipleLocator(1))\n",
+    "    ax.yaxis.set_major_formatter(ticker.StrMethodFormatter(\"{x:.1f}\"))\n",
+    "    ax.yaxis.tick_right()\n",
+    "    ax.spines['left'].set_visible(False)\n",
+    "    ax.spines['bottom'].set_visible(False)\n",
+    "    ax.spines['right'].set_visible(False)\n",
+    "    ax.margins(0)\n",
+    "    ax.grid(which='major', axis='y', c='k', alpha=.1, zorder=-2)\n",
+    "    ax.margins(0)\n",
+    "    ax.set_ylim(0.0, 5.0)\n",
+    "    ax.set_xlim(pd.Timestamp('2020-03-01'), result.index.get_level_values('date')[-1]+pd.Timedelta(days=1))\n",
+    "    fig.set_facecolor('w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
