Update workflow path

--- a/Realtime R0.ipynb
+++ b/Realtime R0.ipynb
@@ -1254,7 +1254,7 @@
    "outputs": [],
    "source": [
     "# Uncomment the following line if you'd like to export the data\n",
-    "#final_results.to_csv('data/rt_old.csv')"
+    "final_results.to_csv('data/rt_old.csv')"
    ]
   },
   {
