--- a/Realtime_R0_World.ipynb
+++ b/Realtime_R0_World.ipynb
@@ -768,7 +768,9 @@
    "outputs": [],
    "source": [
     "# Uncomment the following line if you'd like to export the data\n",
-    "final_results.to_csv('data/covid19za_provincial_confirmed_rt.csv')"
+    "# ZA: select most likely and 90% fields\n",
+    "export_results = final_results[['ML', 'High_90', 'Low_90']]\n",
+    "export_results.to_csv('data/calc/calculated_r0_sa_provincial_cumulative.csv')"
    ]
   },
   {
