Trigger test for all

--- a/notebooks/Realtime R0.ipynb
+++ b/notebooks/Realtime R0.ipynb
@@ -1875,7 +1875,7 @@
     "    export_results = final_results[['ML', 'High_90', 'Low_90']]\n",
     "\n",
     "    # Used by GitHub Action \n",
-    "    export_results.to_csv('data/calc/calculated_r0_sa_provincial_cumulative.csv')\n",
+    "    export_results.to_csv('data/calc/calculated_rt_' + state_title + '_district_cumulative.csv')\n",
     "\n",
     "    # change to this on your own machine, but do not checkin this change\n",
     "    #export_results.to_csv('../data/calc/calculated_rt_' + state_title + '_district_cumulative.csv')\n",
