--- a/notebooks/Realtime R0.ipynb
+++ b/notebooks/Realtime R0.ipynb
@@ -2013,7 +2013,7 @@
    "source": [
     "# Change to True when running on your own local machine\n",
     "# NB, only checkin value as False!\n",
-    "is_action = False"
+    "is_action = True"
    ]
   },
   {
