--- a/notebooks/Realtime R0.ipynb
+++ b/notebooks/Realtime R0.ipynb
@@ -2324,93 +2324,45 @@
    ],
    "source": [
     "# LP TODO: confirm that district level total equals country level values!\n",
-    "results_lp = calculate_district_rt('provincial_lp_cumulative','lp', plotscale=0.8, districts=None, district_title=None, crop=6)"
+    "#results_lp = calculate_district_rt('provincial_lp_cumulative','lp', plotscale=0.8, districts=None, district_title=None, crop=6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NO RESULTS\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# MP TODO: confirm that district level total equals country level values!\n",
-    "results_mp = calculate_district_rt('provincial_mp_cumulative','mp', plotscale=0.8, districts=None, district_title=None, crop=4)"
+    "#results_mp = calculate_district_rt('provincial_mp_cumulative','mp', plotscale=0.8, districts=None, district_title=None, crop=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results_mp"
+    "#results_mp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bojanala_platinum\n",
-      "Fatal crash on final results routine: bojanala_platinum\n",
-      "NO RESULTS\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/schalk/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:13: RuntimeWarning: invalid value encountered in greater\n",
-      "  del sys.path[0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NW TODO: confirm that district level total equals country level values!\n",
-    "results_nw = calculate_district_rt('provincial_nw_cumulative','nw', plotscale=0.8, districts=None, district_title=None, crop=6)"
+    "#results_nw = calculate_district_rt('provincial_nw_cumulative','nw', plotscale=0.8, districts=None, district_title=None, crop=6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results_nw"
+    "#results_nw"
    ]
   },
   {
@@ -2444,7 +2396,7 @@
    ],
    "source": [
     "# EC TODO: confirm that district level total equals country level values!\n",
-    "results_ec = calculate_district_rt('provincial_ec_cumulative','ec', plotscale=0.95, districts=None, district_title=None, crop=3)"
+    "#results_ec = calculate_district_rt('provincial_ec_cumulative','ec', plotscale=0.95, districts=None, district_title=None, crop=3)"
    ]
   },
   {
@@ -2535,7 +2487,7 @@
     }
    ],
    "source": [
-    "results_ec"
+    "#results_ec"
    ]
   },
   {
@@ -2695,7 +2647,7 @@
    ],
    "source": [
     "# WC TODO: confirm that district level total equals country level values!\n",
-    "results_wc = calculate_district_rt('provincial_wc_cumulative','wc', plotscale=0.88, districts=districts_wp) #crop=1"
+    "#results_wc = calculate_district_rt('provincial_wc_cumulative','wc', plotscale=0.88, districts=districts_wp) #crop=1"
    ]
   },
   {
@@ -2786,7 +2738,7 @@
     }
    ],
    "source": [
-    "results_wc"
+    "#results_wc"
    ]
   },
   {
@@ -2819,7 +2771,7 @@
     }
    ],
    "source": [
-    "results_wc_ct = calculate_district_rt('provincial_wc_cumulative','wc', plotscale=0.92, districts=districts_wp_ct, district_title='ct') #crop=1"
+    "#results_wc_ct = calculate_district_rt('provincial_wc_cumulative','wc', plotscale=0.92, districts=districts_wp_ct, district_title='ct') #crop=1"
    ]
   },
   {
@@ -2861,7 +2813,7 @@
     }
    ],
    "source": [
-    "results_wc_cw = calculate_district_rt('provincial_wc_cumulative','wc', plotscale=0.85, districts=districts_wp_cw, district_title='cw') #crop=1"
+    "#results_wc_cw = calculate_district_rt('provincial_wc_cumulative','wc', plotscale=0.85, districts=districts_wp_cw, district_title='cw') #crop=1"
    ]
   },
   {
@@ -2903,7 +2855,7 @@
     }
    ],
    "source": [
-    "results_wc_gr = calculate_district_rt('provincial_wc_cumulative','wc', plotscale=0.85, districts=districts_wp_gr, district_title='gr') #crop=1"
+    "#results_wc_gr = calculate_district_rt('provincial_wc_cumulative','wc', plotscale=0.85, districts=districts_wp_gr, district_title='gr') #crop=1"
    ]
   },
   {
@@ -2945,7 +2897,7 @@
     }
    ],
    "source": [
-    "results_wc_ob = calculate_district_rt('provincial_wc_cumulative','wc', plotscale=0.85, districts=districts_wp_ob, district_title='ob') #crop=1"
+    "#results_wc_ob = calculate_district_rt('provincial_wc_cumulative','wc', plotscale=0.85, districts=districts_wp_ob, district_title='ob') #crop=1"
    ]
   },
   {
@@ -2987,7 +2939,7 @@
     }
    ],
    "source": [
-    "results_wc_wc = calculate_district_rt('provincial_wc_cumulative','wc', plotscale=0.80, districts=districts_wp_wc, district_title='wc') #crop=1"
+    "#results_wc_wc = calculate_district_rt('provincial_wc_cumulative','wc', plotscale=0.80, districts=districts_wp_wc, district_title='wc') #crop=1"
    ]
   },
   {
